--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+
   background: #fff url(./images/body_brickwall.png) 50% 50% repeat;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.theme {
+  margin: 0 20px;
+}
+.list {
+  list-style-type: none;
+  max-width: 500px;
+  margin: 0;
+  padding: 0;
+}
+.item {
+  margin-bottom: 15px;
+}
+
+/* .item-title {
+
+} */
+.item-link {
+  font-size: 12px;
+  color: #666;
 }
