--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ body {
 .item-link {
   font-size: 12px;
   color: #666;
+  max-width: 500px;
+  overflow: hidden;
+}
+.item-code {
+  font-size: 12px;
+  color: #666;
 }
 .item-description {
   font-size: 12px;
